force-app/main/default/objects/Grant_Filtering_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monash_Course_Code__c</fullName>
                    <label>Monash Course Code</label>
                </value>
                <value>
                    <fullName>Country_of_Residence__c</fullName>
                    <label>Country of Residence</label>
                </value>
                <value>
                    <fullName>SBQQ__Quote__r.SBQQ__PrimaryContact__r.Country_of_Citizenship__c</fullName>
                    <label>Country of Citizenship</label>
                </value>
                <value>
                    <fullName>Course_Year_Later_Than_Application_Year__c</fullName>
                    <label>Previous Year Fee Used</label>
                </value>
                <value>
                    <fullName>RPL_Assessment_Status__c</fullName>
                    <label>RPL Assessment Status</label>
                </value>
                <value>
                    <fullName>Applicant_with_Disabilities__c</fullName>
                    <label>Applicant with Disabilities</label>
                </value>
                <value>
                    <fullName>Applicant_Under_18__c</fullName>
                    <label>Applicant Under 18</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Grant Filtering Criteria</relationshipLabel>
        <relationshipName>Grant_Filtering_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant Filtering Criteria</label>
    <nameField>
        <label>Criteria Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Filtering Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>